# nanoVNA_python

./: CITATION.cff  README.md  hello_world.py  test_requirements.txt  zenodo.json
dev_backup/: README.md  hello_world.py  test_file.py
examples/: identifying_serial_ports.py  (+8 more)
nvnapython/: README.md  pyproject.toml
nvnapython/examples/: README.md  _helpers.py  basic_scan.py  hello_world.py  identify_and_select_model.py  plotting_scan.py  plotting_waterfall_realtime.py  plotting_waterfall_static.py  robust_acquisition_loop.py  save_raw_to_csv.py  save_scan_csv.py  screen_capture.py  solt_calibration.py  two_port_s21.py  using_autoconnect.py  using_command_func.py
nvnapython/src/: tempfile.py
nvnapython/src/nvnapython/: __init__.py  _bounds.py  constants.py  core.py  tstfile.py
nvnapython/src/nvnapython/_commands/: __init__.py  acquisition.py  calibration.py  display_ui.py  markers_traces.py  presets_config.py  system_info.py
nvnapython/tests/: __init__.py  collect_readme_data.py  conftest.py  diagnose_continuous.py  diagnose_fastcmd.py  diagnose_help.py  fakes.py  readme_capture.md  run_all_tests.py  test_acquisition.py  test_boundary_safety.py  test_bounds_helper.py  test_calibration.py  test_command_coverage.py  test_core_serial.py  test_display_ui.py  test_edge_cases.py  test_examples_helpers.py  test_hardware.py  test_hardware_audit.py  test_hardware_boundaries.py  test_hardware_capture_probe.py  test_hardware_captures.py  test_hardware_probe.py  test_markers_traces.py  test_parsing.py  test_presets_config.py  test_smoke.py  test_system_info.py
(+14 files in other folders)
