[project]
name = "nvnapython"
version = "2.0.0"
authors = [
    { name = "LC-Linkous", email = "L.C.Linkous@gmail.com" }
]
description = "An UNOFFICIAL Python API for the NanoVNA series of vector network analyzers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyserial>=3.5",
]
license = "GPL-2.0-only"
license-files = ["LICENSE*"]

[project.optional-dependencies]
plotting = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.5",
    "pillow>=10.0",
    'pyqt5 ; platform_system == "Linux"',
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
"Repository" = "https://github.com/LC-Linkous/nanoVNA_python"
"Issues" = "https://github.com/LC-Linkous/nanoVNA_python/issues"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "hardware: tests that require a physically connected NanoVNA device (deselect with -m 'not hardware')",
]